--- a/数据可视化.md
+++ b/数据可视化.md
@@ -28,6 +28,8 @@
 - [29种Bokeh基础可视化图形](https://mp.weixin.qq.com/s?__biz=MzI2NjY5NzI0NA==&mid=2247484880&idx=1&sn=30c502921534fc50ea6f4acfff03544d&chksm=ea8b6aa3ddfce3b54257b8e911d81063197e9f797c8910f2a271d1d15d3dd0f701cf1a2b8b22&mpshare=1&scene=24&srcid=0821TL3KqLytl8XNc62GNM5D&sharer_sharetime=1566398810938&sharer_shareid=a9f97e3603452f2370ed13a9e54707a6&key=b00bc6577437f0f5709ea084d97835b5ceda4767db98e39e9e4965ad027f244c98f56c1fdc5bf5bd697768356b445f6c7829e2d2164006656f2748632f89fb6dd558f40cc518def8f6cb351a4bf9a7ea&ascene=14&uin=MTg2MTEyNTMwMA%3D%3D&devicetype=Windows+10&version=62060833&lang=zh_CN&pass_ticket=%2FHDLBDilUmj8WcIiX8l1lDKPk0qC2mKCGvPluaPw352ntaWmj6fc1h7JNoQoAS5Z)
 - [交互式数据可视化库Bokeh处理分类数据（下）](https://mp.weixin.qq.com/s?__biz=MzI1Mjc1MjgxMA==&mid=2247484300&idx=1&sn=b8831951232e75224b9c7887d614b87e&chksm=e9dfa549dea82c5f3254ac514ff35798e56d553d3f5c156d4e92a8e904fd02686b8c2a17edb8&mpshare=1&scene=24&srcid=0821SXai96k9ypCMGhd8kwTJ&sharer_sharetime=1566398738591&sharer_shareid=a9f97e3603452f2370ed13a9e54707a6&key=5c697a296e1d5a5cb7746bf40120a366435502083bb864a1a103c3372aa7d3ba6b2078b514ce5f543a464958cd088ab3dfad07773357cf209b86936690976cbb5ed0704262cf08894d09b024e8859fe4&ascene=14&uin=MTg2MTEyNTMwMA%3D%3D&devicetype=Windows+10&version=62060833&lang=zh_CN&pass_ticket=%2FHDLBDilUmj8WcIiX8l1lDKPk0qC2mKCGvPluaPw352ntaWmj6fc1h7JNoQoAS5Z)
 - [Bokeh 可视化项目实战经验分享](https://mp.weixin.qq.com/s?__biz=MzI2NjY5NzI0NA==&mid=2247485669&idx=1&sn=30ad932810a6266f1f2a3ae73845357e&chksm=ea8b6796ddfcee807a675127d15dc51a0b5cf96a92f42d9da925b910542bb26f2aa0bb1857b3&mpshare=1&scene=24&srcid=0821bpao2y63FGnLPWVwTBy5&sharer_sharetime=1566398716296&sharer_shareid=a9f97e3603452f2370ed13a9e54707a6&key=b00bc6577437f0f57b6f2a978ac15aec8dca434bd4c77c8976a8a0ad9796d96e7fb38303af23d29cbd0647ebb913ae0211e04ebb28144c3caf45bb7369810d87fb014ec2357b475f7891f485c2b9cafc&ascene=14&uin=MTg2MTEyNTMwMA%3D%3D&devicetype=Windows+10&version=62060833&lang=zh_CN&pass_ticket=%2FHDLBDilUmj8WcIiX8l1lDKPk0qC2mKCGvPluaPw352ntaWmj6fc1h7JNoQoAS5Z)
+- [Bokeh中独特的数据类型简介： ColumnDataSource](https://mp.weixin.qq.com/s?__biz=MzI2NjY5NzI0NA==&mid=2247484983&idx=1&sn=a0f5b35786c918ab21780713fc8bc0d9&chksm=ea8b6944ddfce0525b0de7a1829fb48f9f503065a976b298d112e02ceeb284e1208d895e2591&mpshare=1&scene=24&srcid=0825NjjKvknySCGVuuTogBYL&sharer_sharetime=1566716448318&sharer_shareid=a9f97e3603452f2370ed13a9e54707a6&key=d4d627468bf29e72ac59d8090fc26db23d00b53984cec9f2f8590d77b7c3ccdf6b0921c3a0ccb5260c2667b874e09b2646032e7311584bc18cc139f9ce6f57c8cfd7d1b459ca73c5a71bd443739b8293&ascene=14&uin=MTg2MTEyNTMwMA%3D%3D&devicetype=Windows+10&version=62060833&lang=zh_CN&pass_ticket=%2FHDLBDilUmj8WcIiX8l1lDKPk0qC2mKCGvPluaPw352ntaWmj6fc1h7JNoQoAS5Z)
+- [Bokeh中图形与组件的布局](https://mp.weixin.qq.com/s?__biz=MzI2NjY5NzI0NA==&mid=2247485050&idx=1&sn=0e634da36f8ce47b110d78e6234841bb&chksm=ea8b6909ddfce01f236912c12dd312c0cfdd2be76b2254462c6b7020fc1d69142197ba1332b5&mpshare=1&scene=24&srcid=082517ZP2kYNKShs5WEYzs4e&sharer_sharetime=1566716443617&sharer_shareid=a9f97e3603452f2370ed13a9e54707a6&key=b00bc6577437f0f5e0fcac54bd7490c0d809ad4d38c02b4348c4f479cdb66d9b4af59f2932f3ec97290cc28a6af3da101d5a053ca199b9acfde09de241902fa224491e649a89a71e83fca1f380a979f4&ascene=14&uin=MTg2MTEyNTMwMA%3D%3D&devicetype=Windows+10&version=62060833&lang=zh_CN&pass_ticket=%2FHDLBDilUmj8WcIiX8l1lDKPk0qC2mKCGvPluaPw352ntaWmj6fc1h7JNoQoAS5Z)
 
 
 ### 5. [Pygal](http://pygal.org/en/stable/)
@@ -83,6 +85,13 @@ pip install plotly_express
 - 是 Python 高级声明式可视化库。Altair 提供一个 Python API 在声明式 manner 中构建静态统计可视化库
 - 让开发者们更专注于数据及他们之间的关系，而不是一些不重要的细节
 
+### 12. [Dash Bio](http://dash.plot.ly/dash-bio)
+- 免费的开源 Python 库，用于生物信息学和药物开发应用
+- [入门指南开始](https://dash.plot.ly/getting-started)
+-  交互式 Web 图形、Python 创作和易用性的结合
+```Python
+pip install dash_bio
+```
 
 ## Drag & Drop to Create Visualizations
 
